syntax = "proto3";

package com.ken.smartthermostart;
option java_multiple_files = true;
option java_package = "com.ken.smartthermostart";
option java_outer_classname = "SmartThermostatProto";

service SmartThermostatService {
  rpc AdjustTemperature(stream TemperatureRequest) returns (TemperatureResponse);
}

message TemperatureRequest {
  string thermostat_id = 1;
  int32 temperature = 2;
}

message TemperatureResponse {
  string message = 1;
}
